RESOLVED FIXED305255
[GStreamer][WebRTC] Crash during sender backend clean-up
https://bugs.webkit.org/show_bug.cgi?id=305255
Summary [GStreamer][WebRTC] Crash during sender backend clean-up
Philippe Normand
Reported 2026-01-10 02:47:29 PST
.
Attachments
Philippe Normand
Comment 1 2026-01-10 02:50:59 PST
EWS
Comment 2 2026-01-12 03:38:54 PST
Committed 305451@main (8f979d74e850): <https://commits.webkit.org/305451@main> Reviewed commits have been landed. Closing PR #56388 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-12 03:39:12 PST
Note You need to log in before you can comment on or make changes to this bug.