[GStreamer][WebRTC] Crash during sender backend clean-up https://bugs.webkit.org/show_bug.cgi?id=305255

Reviewed by Xabier Rodriguez-Calvar.

The RealtimeOutgoingMediaSourceGStreamer::StoppedCallback callback can potentially be called
asynchronously so make sure the RtpSenderBackend is still alive when calling it.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerRtpSenderBackend.cpp:
(WebCore::GStreamerRtpSenderBackend::stopSource):

Canonical link: https://commits.webkit.org/305451@main